updated at: 2023-04-25 16:41, 亜-03式小型自動小銃(追加DLC)【VRChat向け】 - 白亜重工 - BOOTH

--- a/VRChat/56/1379156.html
+++ b/VRChat/56/1379156.html
@@ -100,9 +100,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "ql7wCe4pa/n8Wgde+0ZZp6eCjIs5ZF39cQQo8DmqzRw="></script>
+    "sVbKUIp/3BWihaI7Ke2eR6EIvfK9pONmXg1ydgcfGPc="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"亜-03式小型自動小銃(追加DLC)【VRChat向け】","description":"【重要】\n本製品は追加DLCです。本製品単体ではとても使える状態じゃありませんので亜-03式自動小銃(200円の方)に含まれているベースモデルと組み合わせてください\n【注意】\n・商品画像は動く城のフィオのお店 様の「裏面を描画するStandardシェーダー」を使用しています。本製品には含まれていません。","url":"https://booth.pm/ja/items/1379156","offers":{"priceCurrency":"JPY","@type":"Offer","price":"100"},"image":"https://booth.pximg.net/c/620x620/41af4b60-c647-4ace-80c0-e2874277d5ec/i/1379156/e4ab1ca7-0846-41d6-9e8c-b3a132cd7fa0_base_resized.jpg"}
     </script>
@@ -113,7 +113,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="ql7wCe4pa/n8Wgde+0ZZp6eCjIs5ZF39cQQo8DmqzRw="></script>
+    nonce="sVbKUIp/3BWihaI7Ke2eR6EIvfK9pONmXg1ydgcfGPc="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -137,6 +137,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -180,7 +182,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1379156/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               41
@@ -195,14 +197,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1379156/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               41
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
