--- a/VRChat/67/1379367.html
+++ b/VRChat/67/1379367.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "jVRGZ0M7/huY9bXKKHdulledUp+suj8LHEr17BNyLww="></script>
+    "XImg1cMq6MWR2Bkk98pgDwFAVIScHSIXF+eUIZrlcsg="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【Unity】VRC向けビーム5種盛り","description":"VRCなどで使えるビームです。\nunitypackageにパーティクルのPrefab,マテリアル,テクスチャ,シェーダーが含まれています。\n\nHDRカラーになっていますのでポストプロセスのブルームで発光します。\nWorld,Localどちらのシミュレーションスペースでも使えると思います(初期値はWorldです)\n\n動画は下記ツイートあたりから\nhttps://twitter.com/tsutsuji815/status/1130366463997407232","url":"https://booth.pm/ja/items/1379367","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/aa7414fb-c4aa-4710-9c36-eb78e1f7edbb/i/1379367/aada5ea1-da9b-4bb3-8529-5d5a839f47b2_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="jVRGZ0M7/huY9bXKKHdulledUp+suj8LHEr17BNyLww="></script>
+    nonce="XImg1cMq6MWR2Bkk98pgDwFAVIScHSIXF+eUIZrlcsg="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -119,6 +119,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -162,10 +164,10 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1379367/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              1547
+                              1549
                             </div>
                           </div></a><a class=
                           "remove-from-wish-list no-underline !text-current"
@@ -177,14 +179,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1379367/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              1547
+                              1549
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
