updated at: 2023-04-25 16:42, 【終了】短冊大募集 - #YUINOESTORE - BOOTH

--- a/VRChat/47/1379347.html
+++ b/VRChat/47/1379347.html
@@ -100,9 +100,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "Dt205hUyObTYAkbswrBEqNShXcMgy4QcEqVbpSSw8zI="></script>
+    "A5tHaB6s9o+x2SWvkWKI4TEObLxgsGz3xX4TBkmFUQg="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【終了】短冊大募集","description":"●2019.06.16追記\n短冊の募集は終了しました。DLありがとうございました。\n---\nこなふりゅんさんが作成しているPublic申請中の七夕ワールドに飾る短冊を書いてくれる方を募集しているそうです！\n\nちょっとした短冊のテンプレートを作ったので無料配布します。\n短冊を書いて@Draining_KissHSへリプかDMで送りましょう！\n\nこのテンプレートの使用は任意です。サイズ以外の改変も自由とします。\n\n詳細はこちら（こなふりゅんさんのツイート）\nhttps://twitter.com/Draining_KissHS/status/1127510909956513792\n\n2019.05.20許諾済み\n\nYUINOE STOREで提供及び記載されているすべてのコンテンツの無断転載・複製を固く禁じます。","url":"https://booth.pm/ja/items/1379347","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/58c3a4b7-3cf8-4d35-b645-655d8f4315aa/i/1379347/8b88d15a-7b0c-45ab-b65d-ccaa552d498b_base_resized.jpg"}
     </script>
@@ -113,7 +113,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="Dt205hUyObTYAkbswrBEqNShXcMgy4QcEqVbpSSw8zI="></script>
+    nonce="A5tHaB6s9o+x2SWvkWKI4TEObLxgsGz3xX4TBkmFUQg="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -137,6 +137,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -180,7 +182,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1379347/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               15
@@ -195,14 +197,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1379347/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               15
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
