--- a/VRChat/37/1379237.html
+++ b/VRChat/37/1379237.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "koPSXWPH8u4xy274DPm4neoxD1DlCcMBh0vZsFbGJ8Y="></script>
+    "F+tnIOnbALfrQRIUpQeMI4CuvbCRdC1uzjHMD9sAvWQ="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"アザレア風の花","description":"アザレアを見ながら作ったからアザレアです。\n\n花言葉は「節制」「自制心」、白なので「あなたに愛されて幸せ」「満ち足りた心」。\n\n折れるシェイプキー付き。\n\n◇内容\n\n・FBXファイル（茎の有無で2種）\n・テクスチャ（1枚）\n・psdファイル（1枚）\n・Readme\n\n＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝\n\n◇注意事項\n\n1.本モデルはVRChatでの利用を想定しています。VRChat以外のサービスでの動作は保障しかねます。\n\n2.本モデルの利用により生じたいかなる損害・トラブルについても、yanikasは一切の責任を負いません。\n\n◇禁止事項\n\n1.本モデルが自作であるという旨の発言、またはそのように誤解させるような発言を禁止します。\n\n2.本モデルの政治および宗教的用途での利用や、特定の個人・団体への誹謗中傷を目的とした利用を禁止します。\n\n3.改変・改造されたものを含む本モデルデータの配布および販売を禁止します。\n\n◇許諾事項\n　(上記禁止事項に該当しない限り許諾しますが、明記しておきたいもの)\n\n1.本モデルの改変・改造行為\n\n2.禁止事項に抵触しない範囲での商用利用\n\n＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝\n\n不明な点・モデルの不具合などございましたら、下記連絡先にご連絡ください。\n\ntwitter:@yanikas_44508","url":"https://booth.pm/ja/items/1379237","offers":{"priceCurrency":"JPY","@type":"Offer","price":"500"},"image":"https://booth.pximg.net/c/620x620/da52f92a-a981-445e-be01-63f80f1a0ed7/i/1379237/ab6e612f-28c0-4b3d-9b7b-0874017bbf46_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="koPSXWPH8u4xy274DPm4neoxD1DlCcMBh0vZsFbGJ8Y="></script>
+    nonce="F+tnIOnbALfrQRIUpQeMI4CuvbCRdC1uzjHMD9sAvWQ="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1379237/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               94
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1379237/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               94
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
