updated at: 2023-04-25 16:42, (現在VRoid Studio β版専用)VRoid用衣装 レザージャケット/革ジャン テクスチャ - ワグテイルのフツウショップ - BOOTH

--- a/VRChat/67/1378867.html
+++ b/VRChat/67/1378867.html
@@ -76,9 +76,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "IvJcCLxGEQKvdOHEPbuxJPOoLQIm+gLWAZmgRQ+CXTE="></script>
+    "A7cNB9SdZUt0cTWcKuQ2wSzhy1YGOqxiYkJcVRXOp7Q="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"(現在VRoid Studio β版専用)VRoid用衣装 レザージャケット/革ジャン テクスチャ","description":"VRoid用のシンプルなレザージャケット(シングル)のテクスチャです。華美な装飾は加えず、落ち着いたデザインにしています。\n本テクスチャデータはジャケット部分のみの販売となっておりますので、お好みの組み合わせでお楽しみください。(シャツは付属しておりません)\n\n※基本カラーバリエーションは\n黒・赤・青・茶の四色となっております。(ペイントソフト等による色の変更可)\nまた、ファスナーの開きは用途に応じてテクスチャ画像を反転させるなどしてお使いください。\n\n※購入される前に無料のテスト版をダウンロードして頂き、どの様な質感なのか、どの程度の丈の長さがあるのか……等をよくご確認ください。(テスト版はそれらの確認用である為、ファスナー部分やボタン、袖部分などが存在しません)\n\n※ご使用に関して\n動画配信やVRchat等、ご自由にお使いください。\n本データを素材として再配布・販売する事を禁止します。\n改変は許可しますが、改変した状態の本データを素材として配布・販売する事は禁止します。\nまた、本データのご使用によるトラブル等には一切責任を負いません。\n\nテスト版はモデルの確認を行う目的以外での使用(動画配信や制作物に組み込む等)を一切禁止します\n","url":"https://booth.pm/ja/items/1378867","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"350"},"image":"https://booth.pximg.net/c/620x620/fe9033ae-dea5-4557-a1fa-b2cea61c5a16/i/1378867/c45b7c2b-0d9e-4a42-83cf-4a55120f8346_base_resized.jpg"}
     </script>
@@ -92,7 +92,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="IvJcCLxGEQKvdOHEPbuxJPOoLQIm+gLWAZmgRQ+CXTE="></script>
+    nonce="A7cNB9SdZUt0cTWcKuQ2wSzhy1YGOqxiYkJcVRXOp7Q="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -116,6 +116,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -160,7 +162,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1378867/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               64
@@ -175,14 +177,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1378867/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               64
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
