updated at: 2023-04-25 16:42, AYAKASHI PARADE LOGO - onigashima - BOOTH

--- a/VRChat/03/1378903.html
+++ b/VRChat/03/1378903.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "I5QeBvLv+ot362fv993rE5FKxt9PhDuLvu/3xXbloRQ="></script>
+    "zH0f9jmpYjX/jhtJDkYZ5g0inI2wyKqMlbGkqj+qfk4="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"AYAKASHI PARADE LOGO","description":"百鬼夜行（AYAKASHI PARADE）のロゴです。\nアヤカシでパレードしたい方におすすめです。\n\nVRChatアバターへの使用、個人的な小物(マグカップやTシャツなど)作成等はご自由にどうぞ。\n\n再配布と商用利用等に関しましては、「Black」と「White」のみ可能です。\n\n「Colorful」のバージョンはえごぐぅさん［@egoguuvrc］に作成して頂きました。","url":"https://booth.pm/ja/items/1378903","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/ec467e09-9e3c-4fb6-8a6a-55f885c9820b/i/1378903/e7d5d2fc-43ab-4ef3-a43e-d071950b757b_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="I5QeBvLv+ot362fv993rE5FKxt9PhDuLvu/3xXbloRQ="></script>
+    nonce="zH0f9jmpYjX/jhtJDkYZ5g0inI2wyKqMlbGkqj+qfk4="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -119,6 +119,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -162,7 +164,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1378903/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               63
@@ -177,14 +179,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1378903/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               63
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
