--- a/VRChat/14/1378114.html
+++ b/VRChat/14/1378114.html
@@ -73,9 +73,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "Bg0eBrShdXcawoDh7tj4tzM8rlEEfRABPxKsl0TTaZA="></script>
+    "GwquPcKiGIUY5YK9+yfkhEqpFejo/3Zu7BtX7WW1uJk="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"ふみきり","description":"ふみきりの3Dモデルです～\n遮断機にはBoneが入ってるのでアニメーションをつけられます～\n\n踏切の点滅の速さは、tennmetuマテリアルのtennmetu timeから変えれます\n\n・blenderファイル\n・FBX\n・unitypackage\n\n利用規約\n１．改造可能\n２．利用の際のクレジット表記不要\n３．商用利用可能\n４．ゲームエンジン等で開発されたコンテンツ及びサービスで利用可能\n５．再配布、再販売の禁止","url":"https://booth.pm/ja/items/1378114","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/8073d67b-2410-49a1-b608-5700550a6b7b/i/1378114/88cc11b8-5f18-49a2-9560-ea0cd671b83c_base_resized.jpg"}
     </script>
@@ -89,7 +89,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="Bg0eBrShdXcawoDh7tj4tzM8rlEEfRABPxKsl0TTaZA="></script>
+    nonce="GwquPcKiGIUY5YK9+yfkhEqpFejo/3Zu7BtX7WW1uJk="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -113,6 +113,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -156,7 +158,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1378114/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               146
@@ -171,14 +173,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1378114/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               146
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
