--- a/VRChat/66/1377866.html
+++ b/VRChat/66/1377866.html
@@ -74,9 +74,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "8lVeACnmgi2Y+Mx3ST4jfkGMzS45NM8vAAj7kwp12yo="></script>
+    "4mDW36Wy3te4rfsY2xd8oAZJyj1hJY70YzJFXVTP+bw="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"狼面 3Dモデル","description":"VRChat・MMD等での利用を目的とした狼面(半面)の3Dモデルです。\n初めてのモデル作成の為、拙いところがあると思います。\n\n不備や分からない点、要望などがございましたら、気軽にTwitter等で問い合わせください。","url":"https://booth.pm/ja/items/1377866","offers":{"priceCurrency":"JPY","@type":"Offer","price":"300"},"image":"https://booth.pximg.net/c/620x620/f74770fa-ef3f-4c29-871e-a5e6eb004cea/i/1377866/468c8990-f4bf-44f4-9316-2f97d0fc7ea3_base_resized.jpg"}
     </script>
@@ -90,7 +90,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="8lVeACnmgi2Y+Mx3ST4jfkGMzS45NM8vAAj7kwp12yo="></script>
+    nonce="4mDW36Wy3te4rfsY2xd8oAZJyj1hJY70YzJFXVTP+bw="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -118,6 +118,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -161,7 +163,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1377866/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               40
@@ -176,14 +178,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1377866/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               40
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
