--- a/VRChat/01/1377601.html
+++ b/VRChat/01/1377601.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "HhF8l6cqtLF01sliQVgLGIqQk0e2bgERBEBQx749b28="></script>
+    "8aJ6rnng1SsSYrcE+pIzHjK0mriWAWZdwU6D12ZqX9I="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【VRchat向け】王冠","description":"VRChat向けアクセサリ：王冠\n\nunitypackageでポリゴン数1456のFBXファイルとテクスチャが入っています。\n\n【テクスチャ】\n・アルベドマップ\n・メタリックマップ\n・ノーマルマップ\n・2Dマップ\n\n2Dマップはもしunity standard shaderじゃなくて別のシェーダーが使いたかったら、2Dマップを使ってください。","url":"https://booth.pm/ja/items/1377601","offers":{"priceCurrency":"JPY","@type":"Offer","price":"200"},"image":"https://booth.pximg.net/c/620x620/be2218d3-023a-442c-b780-75f1345896f3/i/1377601/a2d0f4c1-7188-41a8-a4d5-be3d3ca29048_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="HhF8l6cqtLF01sliQVgLGIqQk0e2bgERBEBQx749b28="></script>
+    nonce="8aJ6rnng1SsSYrcE+pIzHjK0mriWAWZdwU6D12ZqX9I="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -153,7 +155,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1377601/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               55
@@ -168,14 +170,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1377601/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               55
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
