--- a/VRChat/48/1377348.html
+++ b/VRChat/48/1377348.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "qOGs1vfKNRgmxQZ9Kzj29cWK9nlqTI3pHycDQMZFVkA="></script>
+    "giO0Nod6CeY3wLFP0Gkb/cHVrYbAT1mQ1d4XWG9Q+hk="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【VRChat想定】グラス四種+おまけ","description":"【概要】\nそれぞれのポリゴン数は下記参照願います。\n\n[中身あり]\nグラス：632\nカクテルグラスとーる：760\nカクテルグラス：570\nわいんぐらす：1144\n\n[中身なし]\nグラス：508\nカクテルグラスとーる：572\nカクテルグラス：508\nわいんぐらす：892\nわいんぐらすV2：214012\n\n\n細分化しまくったらいい感じの形になった20万ポリゴンオーバーのワイングラスもおまけでつけておきます。\nシェーダーはStandardのみを想定しています。\n改変等は自由としますが再配布は禁止とします。\n\n\n【内容】\nUnityPackageファイル、Readme同梱。\n\n【使用に際して】\n改変等は自由です。\n再配布は禁止とします。\n\n【その他】\n何かありましたら作者のTwitterまでご連絡願います。\nTwitterID：@mayoi_2_go","url":"https://booth.pm/ja/items/1377348","offers":{"priceCurrency":"JPY","@type":"Offer","price":"500"},"image":"https://booth.pximg.net/c/620x620/b21016d8-acb0-4bb6-b33d-aa858d853231/i/1377348/0678f792-ba4a-41b5-809a-65031d43079d_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="qOGs1vfKNRgmxQZ9Kzj29cWK9nlqTI3pHycDQMZFVkA="></script>
+    nonce="giO0Nod6CeY3wLFP0Gkb/cHVrYbAT1mQ1d4XWG9Q+hk="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1377348/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               81
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1377348/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               81
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
