updated at: 2023-04-25 16:44, VRChat向けオリジナル3Dモデル『反磁力 N pole』 - nishikatsu創造出力所 - BOOTH

--- a/VRChat/65/1377165.html
+++ b/VRChat/65/1377165.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "UXbi2GLJy87KTmuD6KoI4Xhgm6Dqx6aPQGgRBhjMH6o="></script>
+    "9GLs1EgDNfLuVDyI83LIWRq3lmS2SR95zuBBABvedlA="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRChat向けオリジナル3Dモデル『反磁力 N pole』","description":"「磁石」をモデルとして作った武器です。\nシェイプキーで刀身をしまったり出来ます。\nポリゴン数：1314\nテクスチャ改変可\nマテリアルなどをいじって調整してみてください。\n\n利用規約はファイルの中に入ってます。\n\n宗教とか信条、政治関連には使わないでね。","url":"https://booth.pm/ja/items/1377165","offers":{"priceCurrency":"JPY","@type":"Offer","price":"300"},"image":"https://booth.pximg.net/c/620x620/434530f1-ffe2-4303-bcc0-8ff5f4bb9b0f/i/1377165/b682d025-11ae-47aa-b4e6-3d8009200455_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="UXbi2GLJy87KTmuD6KoI4Xhgm6Dqx6aPQGgRBhjMH6o="></script>
+    nonce="9GLs1EgDNfLuVDyI83LIWRq3lmS2SR95zuBBABvedlA="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1377165/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               22
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1377165/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               22
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
