updated at: 2023-04-25 16:45, MOA-013 白斑兎のファキュラ ※販売停止中 - マルンのお店 - BOOTH

--- a/VRChat/11/1220011.html
+++ b/VRChat/11/1220011.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "spuA4hAuTAR4YFrlP67XTPrtipsBaOnty4QVc6jxROo="></script>
+    "ci+6cC6emBaTb7NCEuxW0uh3EhVBCaYYM3myRf1f3LI="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"MOA-013 白斑兎のファキュラ ※販売停止中","description":"MOA-013 -Rabbit of Dark filament-\n黒点兎(成体)のファキュラ\n\n△ポリゴン数10452 マテリアル数4 テクスチャー数4(+2)\n黒色の子と白色の子の2カラータイプ入ってます。\n※UnityのHumanoidに対応しています。\n\n●内容物\n・Prefab入りUnitypackageデータ1つ。\n・3Dモデル(FBX)1体。\n・テクスチャー(PNG)6枚。\n・UV展開図(PNG)4枚。\n・Readme1枚。\n\n●利用規約\n・商用利用の禁止。\n・再配布の禁止。\n・自作と偽る行為の禁止。\n・改変自由。\n・収益を伴う動画や写真への映り込みの許可。\n・その他 法に触れない行為の許可。\n\n●注意事項\n・本モデルはVRChatでの使用を想定しています。\n・本モデルはDynamicboneの使用を想定しています(設定済み)。\n・本データを用いた事によるトラブルに関して作者は一切の責任を負いません。\n・問題、ご不明な点 等ございましたら 作者までお気軽にご連絡下さい。\n\n作者連絡先: https://twitter.com/Marun_Spirit\n\nDynamicbone: https://assetstore.unity.com/packages/tools/animation/dynamic-bone-16743\n","url":"https://booth.pm/ja/items/1220011","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/8ff6fcbd-9bfc-47c9-869c-9f7e8280f01b/i/1220011/29bb030e-5124-440f-a93e-58b72d2ee669_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="spuA4hAuTAR4YFrlP67XTPrtipsBaOnty4QVc6jxROo="></script>
+    nonce="ci+6cC6emBaTb7NCEuxW0uh3EhVBCaYYM3myRf1f3LI="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1220011/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               32
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1220011/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               32
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
