updated at: 2023-04-25 16:45, VRchat向け 色が変わる宝石セット - chemical&#39;s shop - BOOTH

--- a/VRChat/36/1219936.html
+++ b/VRChat/36/1219936.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "eDJH7Hkh+C42cRCQQwdjtJ79zTy3HHkb6I63QeOFYig="></script>
+    "HNk8wJ6S9ipqz0ugGbzb6jthffRIcfwCg85oNSQ7hQ4="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRchat向け 色が変わる宝石セット","description":"https://twitter.com/chemical_15_VR/status/1093824172050927617\n※動いているgif画像が添付されたツイートとなっています\n\n■時間経過で色が変わる宝石のセットです。\n中身の画像やベースの色や色が変わるSpeedが設定できます。\n\n■使い方\nprefab（青い四角いアイコン）をヒエラルキーに置いて使って下さい。\nhttps://chemical15.booth.pm/items/1052437　の商品と組み合わせると、簡単にネックレスが作れます\n\n■中身の変え方\nMaterialの設定を変更すると、すべての宝石の中身が変わります。\n白いアルファチャネル（透明度）が入っている画像を設定すると、金属風の中身ができます。\n\n■中身\n・宝石のFBX\n・セットアップ済宝石Material\n・中身のMaterial\n・サンプルシーン\n・Material用Texture\n・prefab\n・shader\n　\n※この商品に使用されているshaderは、@lept_on様　（https://twitter.com/lept_on）　が作ったshaderを元に作られています（Copyright (c) 2018 UNIUNI）\n\n■禁則事項\n政治的利用\n特定の信条や宗教のための使用\n公序良俗に反する行為\n再配布（改造・未改造問わず）\nその他製作者が不適切と判断したもの\n\n■やっていい事\n改変\n\n※上記以外の使用については作者にお問い合わせください。\n\n連絡先：https://twitter.com/chemical_15_VR\n","url":"https://booth.pm/ja/items/1219936","offers":{"priceCurrency":"JPY","@type":"Offer","price":"300"},"image":"https://booth.pximg.net/c/620x620/9585a184-fff0-488e-8a9d-612c758951c2/i/1219936/0bf2f0fe-eacb-485f-818f-71a07050acae_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="eDJH7Hkh+C42cRCQQwdjtJ79zTy3HHkb6I63QeOFYig="></script>
+    nonce="HNk8wJ6S9ipqz0ugGbzb6jthffRIcfwCg85oNSQ7hQ4="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -159,7 +161,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1219936/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               241
@@ -174,14 +176,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1219936/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               241
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
